GNOME Bugzilla – Bug 684304
[PATCH] Crash in monitor_entry_file()
Last modified: 2012-09-18 23:00:46 UTC
This is a bug reported in Ubuntu: https://bugs.launchpad.net/ubuntu/+source/rhythmbox/+bug/1029333 With stack trace: https://launchpadlibrarian.net/111199789/Stacktrace.txt It looks to me like db->priv->library_locations might be NULL there? I have two possible suggestions after looking at the code: 1) Guard the loop in monitor_entry_file() by checking if library_locations is NULL. 2) In rhythmdb_shutdown(), call rhythmdb_stop_monitoring() before setting library_locations to NULL.
Created attachment 224643 [details] [review] Proposed patch
I think the real problem here is that rhythmdb_stop_monitoring doesn't cancel _monitor_entry_thread.
I can't really see a good reason for that thread to exist, so I'm going to remove it entirely.
commit 7fd3e2d removes the thread.