rhythmdb: don't monitor files outside library locations

Trying to do this involves annoying threads and crashes, and
it's not worth the effort.

https://bugzilla.gnome.org/show_bug.cgi?id=684304